force-app/main/default/objects/GfPurchaseOrder__c/GfPurchaseOrder__c.object-meta.xml
<CustomObject>
    <label>발주서</label>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>