force-app/main/default/objects/GfPurchaseOrder__c/fields/AmountSummary__c.field-meta.xml
<CustomField>
    <fullName>AmountSummary__c</fullName>
    <label>Amount Summary</label>
    <summarizedField>GfPurchaseOrderItem__c.Amount__c</summarizedField>
    <summaryForeignKey>GfPurchaseOrderItem__c.PurchaseOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>