force-app/main/default/objects/GfPurchaseOrder__c/fields/ContractID__c.field-meta.xml
<CustomField>
    <fullName>ContractID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract ID</label>
    <referenceTo>GfContract__c</referenceTo>
    <relationshipName>Gf_Purchase_Order</relationshipName>
    <type>Lookup</type>
</CustomField>