force-app/main/default/objects/GfPurchaseOrder__c/fields/CustomerPONo__c.field-meta.xml
<CustomField>
    <fullName>CustomerPONo__c</fullName>
    <label>Customer PO Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>