force-app/main/default/objects/GfPurchaseOrder__c/fields/DeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddress__c</fullName>
    <label>Delivery Address</label>
    <type>Address</type>
</CustomField>