force-app/main/default/objects/GfPurchaseOrder__c/fields/ERPClientCode__c.field-meta.xml
<CustomField>
    <fullName>ERPClientCode__c</fullName>
    <label>ERP Client Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>