force-app/main/default/objects/GfPurchaseOrder__c/fields/NetAmount__c.field-meta.xml
<CustomField>
    <fullName>NetAmount__c</fullName>
    <label>Net Amount</label>
    <summarizedField>GfPurchaseOrderItem__c.FmNetAmount__c</summarizedField>
    <summaryForeignKey>GfPurchaseOrderItem__c.PurchaseOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>