force-app/main/default/objects/GfPurchaseOrder__c/fields/OrderAmount__c.field-meta.xml
<CustomField>
    <fullName>OrderAmount__c</fullName>
    <label>Order Amount</label>
    <summarizedField>GfPurchaseOrderItem__c.FmOrderAmount__c</summarizedField>
    <summaryForeignKey>GfPurchaseOrderItem__c.PurchaseOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>