force-app/main/default/objects/GfPurchaseOrder__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <displayFormat>PO{YYYYMMDD}-{00000}</displayFormat>
    <label>Order Number</label>
    <type>AutoNumber</type>
</CustomField>