force-app/main/default/objects/GfPurchaseOrder__c/fields/OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderStatus__c</fullName>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production Order Created</fullName>
            </value>
            <value>
                <fullName>PO Created</fullName>
            </value>
            <value>
                <fullName>Order Processing</fullName>
            </value>
            <value>
                <fullName>Production Requested</fullName>
            </value>
            <value>
                <fullName>Production PO Received</fullName>
            </value>
            <value>
                <fullName>Production Planned</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>