force-app/main/default/objects/GfPurchaseOrder__c/fields/RequestDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>RequestDeliveryDate__c</fullName>
    <label>Request Delivery Date</label>
    <type>Date</type>
</CustomField>