force-app/main/default/objects/GfPurchaseOrder__c/fields/ShippingWorker__c.field-meta.xml
<CustomField>
    <fullName>ShippingWorker__c</fullName>
    <label>Shipping Worker</label>
    <length>50</length>
    <type>Text</type>
</CustomField>