force-app/main/default/objects/GfPurchaseOrder__c/fields/ShiptoAccountID__c.field-meta.xml
<CustomField>
    <fullName>ShiptoAccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Gf_Purchase_Order</relationshipName>
    <type>Lookup</type>
</CustomField>