force-app/main/default/objects/GfPurchaseOrder__c/fields/SoldtoAccountID__c.field-meta.xml
<CustomField>
    <fullName>SoldtoAccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Gf_Purchase_Order1</relationshipName>
    <type>Lookup</type>
</CustomField>