force-app/main/default/objects/GfPurchaseOrder__c/fields/TermsofPayment__c.field-meta.xml
<CustomField>
    <fullName>TermsofPayment__c</fullName>
    <label>Terms of Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>